# Private-blockchain

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: block.rs  cli.rs  lib.rs  main.rs
src/components/: AddressList.svelte  BalanceChecker.svelte  BlockchainCreator.svelte  BlockchainViewer.svelte  MineButton.svelte  TransactionSender.svelte  UTXOInfo.svelte  WalletCreator.svelte
src/routes/: +page.svelte
