[package]
name = "bolk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bolk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10.0"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
hex = "0.4.3"
base64 = "0.22.1"

